content/testdata/mondoo-kubernetes-best-practices-ingress-fail/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conflicting-class
  namespace: sample
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: unapproved
  tls:
    - hosts:
        - app.example.test
      secretName: app-example-tls
  rules:
    - host: app.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
